* All browsers (inc.IE6) final fix for adm_submenus on narrow screens. Also fixed untracked IE6/IE7 bug for span.firstlevel. (index.css, GenericMenu.template.php) [Bug 4571]
git-svn-id: https://devel.simplemachines.org/code/smf/trunk@10368 a96bbafc-d752-43aa-a6db-eed64a5f2cf9

--- a/Themes/default/css/index.css
+++ b/Themes/default/css/index.css
@@ -1137,6 +1137,7 @@ span.lowerframe span
 	padding-left: 5px;
 	height: 22px;
 	line-height: 19px;
+	white-space: pre;
 }
 .dropmenu li
 {
@@ -1320,12 +1321,6 @@ ul#navigation li
 {
 	padding-left: 2em;
 	overflow: hidden;
-	height: 3em;
-}
-#adm_submenus ul
-{
-	height: 3em;
-	clear: both;
 }
 
 /* Styles for the general looks for the Curve theme.
@@ -2680,6 +2675,7 @@ tr.titlebg td
 #main_admsection
 {
 	margin-left: 172px;
+	overflow: hidden;
 }
 
 tr.windowbg td, tr.windowbg2 td, tr.approvebg td, tr.highlight2 td
